// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`unholy tests test emptyArrays() 1`] = `
Object {
  "anotherArrayInState": Array [
    10,
  ],
  "obj": Object {
    "anotherArrayInObj": Array [],
    "arrayInObj": Array [],
    "nested": Object {
      "arr": Array [],
    },
    "otherProp": 5,
    "prop": 4,
  },
  "obj2": Object {
    "arr1": Array [
      6,
      7,
    ],
    "arr2": Array [],
    "arr3": Array [
      1,
      2,
      3,
      4,
      5,
    ],
  },
  "otherProp": 3,
  "prop": 2,
  "propInState": Object {
    "toBeUpdated": 1,
  },
}
`;

exports[`unholy tests test emptyArrays() 2`] = `
Object {
  "anotherArrayInState": Array [],
  "obj": Object {
    "anotherArrayInObj": Array [],
    "arrayInObj": Array [],
    "nested": Object {
      "arr": Array [
        1,
        2,
        3,
      ],
    },
    "otherProp": 5,
    "prop": 4,
  },
  "obj2": Object {
    "arr1": Array [
      6,
      7,
    ],
    "arr2": Array [
      "a",
      "b",
    ],
    "arr3": Array [
      1,
      2,
      3,
      4,
      5,
    ],
  },
  "otherProp": 3,
  "prop": 2,
  "propInState": Object {
    "toBeUpdated": 1,
  },
}
`;
